OWL file loading fixed.